Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106659

QPrinter : Scaling factor applied wrongly

    XMLWordPrintable

Details

    • Windows
    • b44f222db (dev), 21053b0b3 (6.5)

    Description

      When the scaling factor is smaller than 100%, the contents get smaller but the white space is not used.
      See the actual result (qtbug106659-actualresult.pdf) and an **expected result (qtbug106659-expected-result.pdf) .
      **The expected result was taken by Windows "Notepad" app.

      "Microsoft Print to PDF" does not support scaling.
      Tested with these PDF creators and the problem is reproducible with any of them.
      bullZip : https://www.bullzip.com/products/pdf/info.php
      PDFCreator : https://www.pdfforge.org/pdfcreator
      Wondershare PDFelement : https://pdf.wondershare.net/

      This used to work in Qt4.

      How to reproduce
      1. Use https://doc.qt.io/qt-6/qtwidgets-tutorials-notepad-example.html
      2. File -> Open and choose any file ( e.g. notepad.cpp )
      3. File -> Print ( If it's gray out, make sure "QT_PRINTSUPPORT_LIB" is defined )
      4. Choose PDF printer, Press "Preference" -> "Advanced.." -> Scaling to e.g. 60%, and press Print

      Attachments

        1. PrinterScaling.png
          PrinterScaling.png
          20 kB
        2. QT4.pdf
          45 kB
        3. QT5.pdf
          381 kB
        4. qtbug106659-actualresult.pdf
          36 kB
        5. qtbug106659-expected-result.pdf
          28 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes